[tool.poetry]
name = "identifiability"
version = "0.1.0"
description = "A JAX-based library for identifiability analysis of dynamical systems"
authors = ["Aybüke Ulusarslan <aybuke.ulusarslan@tum.de> <aybueke.ulusarslan@helmholtz-muenchen.de"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.6.1"
jaxlib = "^0.6.1"
numpy = "^2.3.0"
scipy = "^1.15.3"
hydra-core = "^1.3.2"
structlog = "^25.4.0"
diffrax = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.1"
Sphinx = "^8.3.0"
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

markers = [
    "unit: Tests for a single, isolated unit of code.",
    "integration: Tests for interactions between multiple units.",
    "behavioral: Tests for a specific scientific or model behavior.",
]